# deep-learning

./: pyproject.toml
ANN/: Artificial neural networks.ipynb
deep/: Deep Learning.ipynb  PyTorch Ignite.ipynb
vision/: 0_cnns.ipynb  README.md
