[project]
name = "deep-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "altair>=6.0.0",
    "gensim>=4.4.0",
    "google>=3.0.0",
    "ignite>=1.1.0",
    "ipykernel>=7.1.0",
    "ipython>=8.37.0",
    "matplotlib>=3.10.7",
    "nest-asyncio>=1.6.0",
    "nltk>=3.9.2",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "portalocker>=3.2.0",
    "pyedflib>=0.1.42",
    "rasa>=0.1.1",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "spacy>=3.8.8",
    "statsmodels>=0.14.5",
    "tensorflow>=2.20.0",
    "torch>=2.9.0",
    "torchinfo>=1.8.0",
    "torchtext>=0.18.0",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
    "unidecode>=1.4.0",
]
